<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="app_load_text">Загрузка…</string>

    <string name="communication_error">Error in getting data. Please try again later.</string>
    <string name="get_need_permissions">Для корректной работы приложения предоставьте необходимые разрешения</string>

    <string name="events_filename">events.json</string>
    <string name="categories_filename">categories.json</string>

    <string name="nav_news">Новости</string>
    <string name="nav_search">Поиск</string>
    <string name="nav_help">Помочь</string>
    <string name="nav_history">История</string>
    <string name="nav_profile">Профиль</string>

    <string name="nav_profile_name">Профиль</string>
    <string name="nav_profile_edit">Изменить</string>

    <string name="profile_date_birth">Дата рождения</string>
    <string name="profile_work">Сфера деятельности</string>
    <string name="profile_push">Получать push-уведомления</string>
    <string name="profile_friends">Ваши друзья</string>
    <string name="profile_exit">Выйти из аккаунта</string>

    <string name="photo_dialog_upload">Выбрать фото</string>
    <string name="photo_dialog_camera">Сделать снимок</string>
    <string name="photo_dialog_delete">Удалить</string>

    <string name="news_menu_filter">Фильтр</string>

    <string name="helps_title">Выберите категорию помощи</string>

    <string name="filters_ok">Принять</string>

    <string name="filters_toolbar_title">Фильтры</string>
    <string name="filters_title">Категории помощи</string>

    <string name="detail_event_share">Поделиться</string>

    <string name="event_nav_shirt">Помочь\nвещами</string>
    <string name="event_nav_hands">Стать\nволонтером</string>
    <string name="event_nav_tools">Проф.\nпомощь</string>
    <string name="event_nav_coins">Помочь\nденьгами</string>

    <string name="event_detail_mail_title">У вас есть вопросы?</string>
    <string name="event_detail_mail_button"><u>Напишите нам</u></string>
    <string name="event_detail_site_button"><u>Перейти на сайт организации</u></string>

    <string name="auth_tv_toolbar">Авторизация</string>
    <string name="auth_tv_top">Для участия в мероприятиях войдите в приложение через социальные сети</string>
    <string name="auth_tv_center">Или авторизуйтесь через приложение</string>
    <string name="auth_tv_hint_email">Введите e-mail</string>
    <string name="auth_tv_hint_pass">Введите пароль</string>
    <string name="auth_btn_enter">ВОЙТИ</string>
    <string name="auth_tv_forgot_pass"><u>Забыли пароль?</u></string>
    <string name="auth_tv_registration"><u>Регистрация</u></string>

    <string name="search_hint">Введите ключевые слова</string>
    <string name="events_search_fragment_text_center">Напишите в строке поиска название мероприятия или ключевые слова.</string>
    <string name="events_search_fragment_text_bottom">Например, <u>мастер-класс, помощь</u></string>
</resources>
