<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/news"
        android:title="@string/nav_news" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/searh"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/heart"
        android:title="@string/nav_help" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile" />
</menu>